--- a/optimal.in
+++ b/optimal.in
@@ -1,13 +1,11 @@
 title abell57CEK
-sphere
+#sphere
 table SED "abell57Unique.sed"
 LUMINOSITY 36.2790599913 LOG
-HDEN=7.358073 LOG
-RADIUS= 15.136085 LOG
-optimize range from 13 to 16
-optimize increments 0.25
+HDEN=7.096120 LOG
+RADIUS 15.673943 depth or outer R 12.000000 LOG
 abundances planetary nebula
-METALS= 2.5 LOG
+METALS= 0.096225 LOG
 iterate
 optimize lines
 "Ne 3" 3868.76 intensity = 2.73
@@ -17,6 +15,7 @@ optimize lines
 "Ne 3" 3967.47 intensity = 0.563
 "O  1" 6300.30 intensity = 0.015
 "N  2" 6583.45 intensity = 0.017
+"O  1" 6300.30 intensity = 0.015
 end of lines
 save last lines, zone cumulative, file="abell57_3.emission"
 "O  2" 3726
